--- a/derek_laister_ma2.html
+++ b/derek_laister_ma2.html
@@ -131,3 +131,5 @@ Grid (basis for MA, modified for MA params): https://www.w3schools.com/css/css_g
 Flex Box: https://www.w3schools.com/css/css3_flexbox.asp
 -->
 
+<!--Video demonstration link: https://youtu.be/L__bqbaBpwQ-->
+
