--- a/index.html
+++ b/index.html
@@ -1,135 +1,50 @@
-<!--Task 1: Page Template with Grid-->
-<!doctype html>
-<html class="no-js" lang="en">
+<!DOCTYPE html>
+<html lang="english">
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Grid Layout Example</title>
+  <head>
+    <meta charset="utf-8">
+    <title>Home</title>
+    <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet" href="css/commonElements.css"/>
+  </head>
 
-  <style>
-     /* Grid Container Style and Structure */
-    .container {
-      display: grid;
-      grid-template-areas:
-        "header header header"
-        "leftBar mainContent rightBar"
-        "footer footer footer";
-      /* fr (fraction) of the defined space, 1x, 4x, 1x */
-      grid-template-columns: 1fr 4fr 1fr;
-      grid-template-rows: 1fr 4fr 1fr;
-      gap: 3px;
-      background-color: black;
-      padding: 3px;
-    }
+  <body>
 
-    /* Style For Grid div Elements*/
-    .container > div {
-      background-color: green;
-      padding: 10px;
-      border: 1px solid red;
-    }
+    <nav class="navbar">
+     <ul>
+       <li><a href="index.html" class="active-page">Home</a></li>
+       <li><a href="sample.html">The Game</a></li>
+       <li><a href="rules.html">The Rules</a></li>
+       <li><a href="scores.html">The Scores</a></li>
+     </ul>
+    </nav>
 
-    .header {
-      grid-area: header;
-      display: flex;
-      /* Align To Horizontally */
-      justify-content: center;
-      /* Align Vertically */
-      align-items: center;
-      /*text-align: center;*/
-    }
+  <main>
+    <header><h1>Battleship Home</h1></header>
 
-    .leftBar {
-      grid-area: leftBar;
-    }
+    <h3>Welcome to the world of <span class="red-text">Battleship</span>!</h3>
 
-     /* Hide ul li Content In leftBar*/
-     .leftBar ul li {
-       visibility: hidden;
-     }
+    <p class="first-line">Lorem ipsum odor amet, consectetuer adipiscing elit. Diam accumsan ac sociosqu; nullam dapibus ridiculus praesent blandit. Risus rutrum arcu sem purus molestie turpis pellentesque ullamcorper. Metus eu aliquet sit gravida sodales. Varius parturient ex gravida, vehicula taciti platea aenean lacinia. Metus quis potenti; arcu vitae fermentum cubilia magnis.</p>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Diam accumsan ac sociosqu; nullam dapibus ridiculus praesent blandit. Risus rutrum arcu sem purus molestie turpis pellentesque ullamcorper. Metus eu aliquet sit gravida sodales. Varius parturient ex gravida, vehicula taciti platea aenean lacinia. Metus quis potenti; arcu vitae fermentum cubilia magnis.</p>
+    <p>Ornare sit dictumst malesuada aliquam aenean molestie vestibulum. Justo semper eleifend ridiculus nascetur etiam. Mus pulvinar nam hac elementum euismod condimentum quisque. Odio suspendisse orci montes tempor nam. Id sagittis viverra aliquet ultrices rutrum congue ut magnis. Auctor ligula ornare taciti; ornare sodales eleifend tortor. Proin imperdiet sapien phasellus est; lacinia mattis lacus maximus nisl. Blandit ligula tortor fringilla, tempor bibendum volutpat amet ut finibus. Hendrerit amet dapibus integer congue rutrum lobortis ut eros.</p>
+    <img src="https://i5.walmartimages.com/asr/c6671817-39be-451b-a73b-f3462c6db844.5e01de4f6c352c381f05e9c83cc7d556.jpeg" alt="Battle Ship">
+  </main>
 
-    .mainContent {
-      grid-area: mainContent;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+    <footer>
+      <p><i>Derek Laister</i><br/>
+      CS 5610 | Winter 2025</p>
+    </footer>
 
-    .rightBar {
-      grid-area: rightBar;
-      /* Add Style Elements Here */
-    }
-
-    .footer {
-      grid-area: footer;
-      text-align: center;
-    }
-
-    /* Task 2: Transition and Hover */
-    /* Hover Box (Small) with .5 sec transition */
-    .hoverAndTransition {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 60px;
-      height: 60px;
-      background-color: white;
-      margin: auto;
-      /* The Transition Effect */
-      transition: all 0.5s ease;
-    }
-
-    /* Hover Box (Large) */
-    .hoverAndTransition:hover {
-      width: 120px;
-      height: 120px;
-      background-color: red;
-    }
-
-  </style>
-</head>
-
-<body>
-<div class="container">
-  <!-- Header -->
-  <div class="header">
-    <h1>Derek's Website</h1>
-  </div>
-
-  <!-- Left Sidebar -->
-  <div class="leftBar">
-    <ul>
-      <li><a href="https://www.google.com/">Home Page</a><br></li>
-      <li><a href="https://www.google.com/imghp?hl=en&authuser=0&ogbl">Photos</a><br></li>
-      <li><a href="https://www.youtube.com/watch?v=oHg5SJYRHA0">Secret Project</a></li>
-    </ul>
-  </div>
-
-  <!-- Main Content -->
-  <div class="mainContent">
-    <div class="hoverAndTransition"></div>
-  </div>
-
-  <!-- Right Sidebar -->
-  <div class="rightBar">
-    <!-- Content Here -->
-  </div>
-
-  <!-- Footer -->
-  <div class="footer">
-    <!-- Content Here -->
-  </div>
-
-</div>
-</body>
+  </body>
 
 </html>
 
-<!-- Resources used:
-Grid (basis for MA, modified for MA params): https://www.w3schools.com/css/css_grid.asp
-Flex Box: https://www.w3schools.com/css/css3_flexbox.asp
+<!--
+- Navbar modeled after Bro Code demo: https://www.youtube.com/watch?v=f3uCSh6LIY0
+- CSS image style: https://www.w3schools.com/css/css3_images.asp
+- Span: https://www.w3schools.com/tags/tag_span.asp
+- Text Outline: https://www.w3schools.com/cssref/pr_outline.php
+- A second pseudo-element besides hover: https://www.w3schools.com/css/css_pseudo_elements.asp
+- @media - https://www.w3schools.com/css/tryit.asp?filename=trycss3_media_queries1
+- Flexbox - https://developer.mozilla.org/en-US/docs/Web/CSS/flex
 -->
-
-<!--Video demonstration link: https://youtu.be/L__bqbaBpwQ-->
-
